Revision history for MooX-Failover

{{$NEXT}}
  [Incompatability]
  - Rewrote the interface entirely, so that the failover is specified
    as part of the class definition. See the POD for details.

  [Enhancements]
  - Significant optimizations at the expense of incompatability.

  - Added the ability to use an alternative name of the constructor
    for the failover class.

  - Arguments for the constructor can be a hash reference, array
    reference or scalar.

  [Other Changes]
  - Added missing MANIFEST.SKIP and removed dist.ini from
    distribution.

v0.1.0_01 2014-12-08 17:51:22+00:00 Europe/London
  - An initial port of MooseX-Failover to Moo.
